# Game_of_life_rs

./: .gitignore  Cargo.toml
src/: backends.rs  conway_rules.rs  error_handling.rs  game.rs  ggez_graphics.rs  grid.rs  heat_rules.rs  lib.rs  main.rs  piston_graphics.rs  pixels_graphics.rs  rgb.rs  scripting.rs  sfml_graphics.rs  terminal_graphics.rs  timer.rs
