[package]
name = "game_of_life"
version = "0.4.0"
authors = ["kiefer <eero.manty@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = { version = "0.9", optional = true }
rand = "0.8"
piston = { version = "0.55", optional = true }
piston2d-graphics = { version = "0.44", optional = true }
pistoncore-glutin_window = { version = "0.72", optional = true }
piston2d-opengl_graphics = { version = "0.83", optional = true }
image = { version = "0.24", optional = true }
pixels = { version = "0.13", optional = true }
winit = { version = "0.29", optional = true }
winit_input_helper = { version = "0.15", optional = true }
rhai = { version = "1.4", optional = true, features = [
    "sync",
    "f32_float",
    "only_i32",
] }
sfml = { version = "0.21", optional = true }
crossterm = { version = "0.27", optional = true }
thiserror = "1.0.31"
anyhow = "1.0"

[features]
scripting = ["rhai"]
graphics-ggez = ["ggez"]
graphics-piston = [
    "piston",
    "piston2d-graphics",
    "pistoncore-glutin_window",
    "piston2d-opengl_graphics",
    "image",
]
graphics-pixels = ["pixels", "winit", "winit_input_helper"]
graphics-sfml = ["sfml"]
graphics-terminal = ["crossterm"]
